--- a/advmeds-device-management_lib/src/main/res/values/strings.xml
+++ b/advmeds-device-management_lib/src/main/res/values/strings.xml
@@ -87,4 +87,20 @@
     <string name="txt_pair_start">Start pairing</string>
     <string name="dialog_message_please_reboot_or_measure_again">Please turn on the device power again and re-measure,then click「Connect to Device」on the page</string>
 
+
+<!--    照護包-->
+    <string name="device_temperature_second">Second thermometer</string>
+    <string name="device_grip">Hand Grip</string>
+    <string name="device_waist">Waist Line</string>
+    <string name="device_stethoscope">Stethoscope</string>
+    <string name="device_card_reader">Card Reader</string>
+
+    <!--    聽診器-->
+    <string name="more_ble_txt_imedi_plus_ds_101_title">Imedi Plus DS101 instructions:</string>
+    <string name="more_ble_txt_imedi_plus_ds_101">1. Please turn on the power of the stethoscope\n2. Tap "Start pairing again" at the bottom of this page</string>
+    <!--    讀卡機-->
+    <string name="more_ble_txt_acr_3901u_s1_title">ACR3901U-S1 instructions:</string>
+    <string name="more_ble_txt_acr_3901u_s1">1. Move the switch aside to Bluetooth sign. The blue light flashes as activated./n2. Tap "Start pairing again" at the bottom of this page</string>
+
+
 </resources>
