--- a/advmeds-device-management_lib/src/main/res/values-th-rTH/strings.xml
+++ b/advmeds-device-management_lib/src/main/res/values-th-rTH/strings.xml
@@ -101,5 +101,5 @@
     <string name="more_ble_txt_imedi_plus_ds_101">1. Please turn on the power of the stethoscope\n2. Tap "Start pairing again" at the bottom of this page</string>
     <!--    讀卡機-->
     <string name="more_ble_txt_acr_3901u_s1_title">ACR3901U-S1 instructions:</string>
-    <string name="more_ble_txt_acr_3901u_s1">1. ย้ายสวิตช์ไปที่สัญลักษณ์ Bluetooth แสงสีน้ำเงินกระพริบเมื่อเปิดใช้งาน/n2. แตะ "เริ่มการจับคู่อีกครั้ง" ที่ด้านล่างของหน้านี้</string>
+    <string name="more_ble_txt_acr_3901u_s1">1. ย้ายสวิตช์ไปที่สัญลักษณ์ Bluetooth แสงสีน้ำเงินกระพริบเมื่อเปิดใช้งาน\n2. แตะ "เริ่มการจับคู่อีกครั้ง" ที่ด้านล่างของหน้านี้</string>
 </resources>
