--- a/advmeds-device-management_lib/src/main/res/values-zh-rTW/strings.xml
+++ b/advmeds-device-management_lib/src/main/res/values-zh-rTW/strings.xml
@@ -105,7 +105,7 @@
     <string name="more_ble_txt_imedi_plus_ds_101">1. 請開啟聽診器電源\n2. 按頁面下方的「開始配對」</string>
     <!--    讀卡機-->
     <string name="more_ble_txt_acr_3901u_s1_title">ACR3901U-S1配對說明：</string>
-    <string name="more_ble_txt_acr_3901u_s1">1. 將側邊的電源切換至藍牙圖案處，藍色燈號閃爍時為啟用狀態/n2. 按頁面下方的「重新配對」</string>
+    <string name="more_ble_txt_acr_3901u_s1">1. 將側邊的電源切換至藍牙圖案處，藍色燈號閃爍時為啟用狀態\n2. 按頁面下方的「重新配對」</string>
 
 
 </resources>
