--- a/advmeds-device-management_lib/src/main/res/values/strings.xml
+++ b/advmeds-device-management_lib/src/main/res/values/strings.xml
@@ -100,7 +100,7 @@
     <string name="more_ble_txt_imedi_plus_ds_101">1. Please turn on the power of the stethoscope\n2. Tap "Start pairing again" at the bottom of this page</string>
     <!--    讀卡機-->
     <string name="more_ble_txt_acr_3901u_s1_title">ACR3901U-S1 instructions:</string>
-    <string name="more_ble_txt_acr_3901u_s1">1. Move the switch aside to Bluetooth sign. The blue light flashes as activated./n2. Tap "Start pairing again" at the bottom of this page</string>
+    <string name="more_ble_txt_acr_3901u_s1">1. Move the switch aside to Bluetooth sign. The blue light flashes as activated.\n2. Tap "Start pairing again" at the bottom of this page</string>
 
 
 </resources>
