--- a/advmeds-device-management_lib/src/main/res/values-th-rTH/strings.xml
+++ b/advmeds-device-management_lib/src/main/res/values-th-rTH/strings.xml
@@ -102,4 +102,18 @@
     <!--    讀卡機-->
     <string name="more_ble_txt_acr_3901u_s1_title">ACR3901U-S1 instructions:</string>
     <string name="more_ble_txt_acr_3901u_s1">1. ย้ายสวิตช์ไปที่สัญลักษณ์ Bluetooth แสงสีน้ำเงินกระพริบเมื่อเปิดใช้งาน\n2. แตะ "เริ่มการจับคู่อีกครั้ง" ที่ด้านล่างของหน้านี้</string>
+    //藍芽設備操作說明
+    <string name="operation_info_taidoc_global">It\'s accessing to grabbing data of your results or you can type it in by yourself.</string>
+
+    <string name="operation_info_bf4030">Showing “Σ” on the bottom of the screen of forehead thermometer means connected. Please operate directly to produce your records. </string>
+
+    <string name="operation_info_taidoc_meter" >Please confirm your device already have measurement data,and It\'s accessing to grabing the latest one or you can type it in by yourself</string>
+
+    <string name="operation_info_dspcombo">Please turn on the power of the blood glucose meter. When the left blue LED starts flashing, please put in your finger directly and let it stay for about one minute.</string>
+
+    <string name="operation_info_ds_101">It\'s accessing to grabbing data of your results.</string>
+
+    <string name ="operation_card_reader_info"> กำลังเชื่อมต่อกับเครื่องอ่านการ์ด หรือคุณสามารถข้ามไปได้ในขณะนี้ </string>
+
+
 </resources>
