--- a/advmeds-device-management_lib/src/main/res/values-zh-rTW/strings.xml
+++ b/advmeds-device-management_lib/src/main/res/values-zh-rTW/strings.xml
@@ -76,6 +76,7 @@
     <string name="more_ble_txt_gd40_and_td4272">1. 請先確認血糖機的電源是關的\n2. 將血糖機左側的開關往下拉一下，螢幕左上方的藍色LED燈會開始閃爍\n3. 按頁面下方的「開始配對」</string>
     <string name="more_ble_txt_d40_and_td3261_sugar">1. 請先確認血糖機的電源是關的\n2. 按血糖機螢幕右下方的無線傳輸按鈕，螢幕即會顯示”PCL”\n3. 按下頁面下方的「開始配對」</string>
     <string name="more_ble_txt_td4216_sugar">1. 輕按尿酸計右下方按鈕，螢幕即會顯示”BLE”，上方藍色LED燈會開始閃爍\n2. 按頁面下方的「開始配對」</string>
+    <string name="more_ble_txt_td4206_sugar">1. 將藍牙接收器插入血糖機，接收器上方藍色LED燈會開始閃爍，且螢幕出現”PC”\n2. 按頁面右上方的”配對”</string>
     <string name="more_ble_txt_dsp_combo">1. 請開啟血糖機電源， 右側藍色LED燈亮起\n2. 按頁面下方的「開始配對」</string>
 
     <!--    尿酸-->
