--- a/advmeds-device-management_lib/src/main/res/values-zh-rTW/strings.xml
+++ b/advmeds-device-management_lib/src/main/res/values-zh-rTW/strings.xml
@@ -28,6 +28,7 @@
     <string name="more_ble_txt_td3128_title">TaiDoc TD-3128配對說明：</string>
     <!--    體重-->
     <string name="more_ble_txt_td2555_title">TaiDoc TD-2555配對說明：</string>
+    <string name="more_ble_txt_w600_and_td2560_title">FORA W600 / TaiDoc TD-2560配對說明：</string>
     <!--    額溫-->
     <string name="more_ble_txt_bf4030_title">BF4030配對說明：</string>
     <string name="more_ble_txt_ir40_and_td1241_title">FORA IR40 / TaiDoc TD-1241配對說明：</string>
@@ -62,6 +63,7 @@
     <string name="more_ble_txt_td3128">1. 請先確認血壓機的電源是關的\n2. 長按血壓機左上方的「Ｍ」按鈕，直到螢幕顯示”PCL”\n3. 按頁面下方的「開始配對」</string>
     <!--    體重-->
     <string name="more_ble_txt_td2555">1. 請先確認體重機的電源是關的\n2. 長按體重機上的「SET」按鈕，直到螢幕顯示藍牙圖示\n3. 按頁面下方的「開始配對」</string>
+    <string name="more_ble_txt_w600_and_td2560">1. 請先確認體重機的電源是關的\n2. 長按體重機上的「SET」按鈕，直到螢幕顯示藍牙圖示\n3. 按頁面下方的「開始配對」</string>
     <!--    額溫-->
     <string name="more_ble_txt_bf4030">1. 請開啟體溫計電源\n2. 按頁面下方的「開始配對」</string>
     <string name="more_ble_txt_ir40_and_td1241">1. 請開啟體溫計電源並量測後，左上方藍色LED燈會開始閃爍\n2. 按頁面下方的「開始配對」</string>
@@ -85,6 +87,7 @@
     <string name="more_ble_txt_td4216_uric_acid">1. 輕按尿酸計右下方按鈕，螢幕即會顯示”BLE”，上方藍色LED燈會開始閃爍\n2. 按頁面下方的「開始配對」</string>
     <!--    血酮-->
     <string name="more_ble_txt_td4206_ketone">1. 將藍牙接收器插入血酮機，接收器上方藍色LED燈會開始閃爍，且螢幕出現”PC”\n2. 按頁面下方的「開始配對」</string>
+    <string name="more_ble_txt_td4216_ketone">1. 將藍牙接收器插入血酮機，接收器上方藍色LED燈會開始閃爍，且螢幕出現”PC”\n2. 按頁面下方的「開始配對」</string>
     <!--    膽固醇-->
     <!--    目前暫無設備-->
 
