--- a/advmeds-device-management_lib/src/main/res/values/strings.xml
+++ b/advmeds-device-management_lib/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="more_ble_connect_temperature">Thermometer</string>
     <string name="more_ble_connect_blood_o2">Oxygen machine</string>
     <string name="more_ble_connect_blood_sugar">Blood glucose meters</string>
+    <string name="more_ble_connect_uric_acid">Uric Acid meter</string>
+    <string name="more_ble_connect_ketone">Ketone meter</string>
+    <string name="more_ble_connect_cholesterol">Cholesterol meter</string>
     <string name="text_ketone">Ketone</string>
     <string name="text_cholesterol">Cholesterol</string>
     <string name="text_grip_str">Grip strength</string>
@@ -86,6 +89,7 @@
     <string name="more_ble_txt_td4206_ketone">Put blue tooth dongle into the ketone meter, the blue LED of the dongle will start twinkling and the screen will appear "PC". Then please tap on the "Pair" button at upper right corner of this page.</string>
     <string name="more_ble_txt_td4216_ketone">Put blue tooth dongle into the ketone meter, the blue LED of the dongle will start twinkling and the screen will appear "PC". Then please tap on the "Pair" button at upper right corner of this page.</string>
     <!--    膽固醇-->
+    <string name="more_ble_txt_td4216_cholesterol">Put blue tooth dongle into the cholesterol meter, the blue LED of the dongle will start twinkling and the screen will appear "PC". Then please tap on the "Pair" button at upper right corner of this page.</string>
     <!--    目前暫無設備-->
     <string name="now_pair_device">Current device %s</string>
     <string name="txt_pair_start">Start pairing</string>
